compiler/testData/diagnostics/tests/dataClasses/emptyConstructor.kt
data class A()

fun foo(a: A) {
    a.<!UNRESOLVED_REFERENCE!>component1<!>()
    a.<!UNRESOLVED_REFERENCE!>component2<!>()
}
